--- a/chatbot-withprompts.ipynb
+++ b/chatbot-withprompts.ipynb
@@ -1,42 +1,26 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# CTSE - Assignment 2 - Lecture notes chatbot"
-      ],
       "metadata": {
         "id": "3D4VonqP9Eq_"
-      }
+      },
+      "source": [
+        "# CTSE - Assignment 2 - Lecture notes chatbot"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Install all the dependencies\n"
-      ],
       "metadata": {
         "id": "oCeidfLP9Se6"
-      }
+      },
+      "source": [
+        "# Install all the dependencies\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "%pip install google-generativeai langchain langchain_community pypdf nltk sentence-transformers faiss-cpu python-dotenv python-pptx unstructured"
-      ],
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -44,11 +28,10 @@
         "id": "FlPV7AlL9hcT",
         "outputId": "6cfaad05-5e21-4eac-81b4-5e0a2680756f"
       },
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: google-generativeai in /usr/local/lib/python3.11/dist-packages (0.8.5)\n",
             "Requirement already satisfied: langchain in /usr/local/lib/python3.11/dist-packages (0.3.24)\n",
@@ -228,19 +211,27 @@
             "Successfully installed XlsxWriter-3.2.3 aiofiles-24.1.0 backoff-2.2.1 emoji-2.14.1 eval-type-backport-0.2.2 filetype-1.2.0 langdetect-1.0.9 olefile-0.47 python-iso639-2025.2.18 python-magic-0.4.27 python-oxmsg-0.0.2 python-pptx-1.0.2 rapidfuzz-3.13.0 unstructured-0.17.2 unstructured-client-0.34.0\n"
           ]
         }
+      ],
+      "source": [
+        "%pip install google-generativeai langchain langchain_community pypdf nltk sentence-transformers faiss-cpu python-dotenv python-pptx unstructured"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Import necessary libraries"
-      ],
       "metadata": {
         "id": "Z1nWdjUg-csX"
-      }
+      },
+      "source": [
+        "# Import necessary libraries"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "Pa4Goy8l-f2Z"
+      },
+      "outputs": [],
       "source": [
         "import os\n",
         "import glob\n",
@@ -253,27 +244,20 @@
         "from IPython.display import Markdown, display\n",
         "from dotenv import load_dotenv\n",
         "from langchain_community.document_loaders import UnstructuredPowerPointLoader"
-      ],
-      "metadata": {
-        "id": "Pa4Goy8l-f2Z"
-      },
-      "execution_count": 6,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Load environment variables from .env file"
-      ],
       "metadata": {
         "id": "l_Qizbn6-nMz"
-      }
+      },
+      "source": [
+        "# Load environment variables from .env file"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "load_dotenv()"
-      ],
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -281,34 +265,34 @@
         "id": "hX95li-y-4xV",
         "outputId": "d1954dfa-b77d-4ce4-ba22-47e7fcbf62ff"
       },
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "False"
             ]
           },
+          "execution_count": 7,
           "metadata": {},
-          "execution_count": 7
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "load_dotenv()"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Download NLTK resources"
-      ],
       "metadata": {
         "id": "Iop9dwYa-7ux"
-      }
+      },
+      "source": [
+        "# Download NLTK resources"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "nltk.download('punkt')"
-      ],
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -316,63 +300,70 @@
         "id": "HIW2yhxl_Gwz",
         "outputId": "b22cfa0a-fc9d-48f3-a2f4-a394e7aec567"
       },
-      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
             "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "True"
             ]
           },
+          "execution_count": 8,
           "metadata": {},
-          "execution_count": 8
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "nltk.download('punkt')"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Get API key from environment variable"
-      ],
       "metadata": {
         "id": "szqKoatW_JCp"
-      }
+      },
+      "source": [
+        "# Get API key from environment variable"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "_WtbtR6p_Lz9"
+      },
+      "outputs": [],
       "source": [
         "GEMINI_API_KEY = os.getenv(\"GEMINI_API_KEY\")\n",
         "\n",
         "if not GEMINI_API_KEY:\n",
         "    #print(\"API key not found. Please make sure your .env file contains the GEMINI_API_KEY.\")\n",
-        "    GEMINI_API_KEY = \"AIzaSyAZzMLO4vLdBZ-AbhqUrgr2n1PWqFx-aC0\""
-      ],
-      "metadata": {
-        "id": "_WtbtR6p_Lz9"
-      },
-      "execution_count": 9,
-      "outputs": []
+        "    GEMINI_API_KEY = \"GEMINI_API_KEY\""
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Set up Gemini model"
-      ],
       "metadata": {
         "id": "e5Cm6vIy_OSM"
-      }
+      },
+      "source": [
+        "# Set up Gemini model"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {
+        "id": "T0sM8vkmAvvc"
+      },
+      "outputs": [],
       "source": [
         "def setup_gemini(api_key):\n",
         "    \"\"\"Configure and initialize the Gemini model.\"\"\"\n",
@@ -390,24 +381,24 @@
         "    )\n",
         "\n",
         "    return model"
-      ],
-      "metadata": {
-        "id": "T0sM8vkmAvvc"
-      },
-      "execution_count": 10,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Load documents from datasets folder"
-      ],
       "metadata": {
         "id": "ebI7nbqeA0UL"
-      }
+      },
+      "source": [
+        "# Load documents from datasets folder"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {
+        "id": "ELfTnYORA67B"
+      },
+      "outputs": [],
       "source": [
         "def load_documents():\n",
         "    \"\"\"Load CTSE lecture notes from the datasets folder.\"\"\"\n",
@@ -447,24 +438,24 @@
         "            print(f\"Error loading PowerPoint {ppt_file}: {e}\")\n",
         "\n",
         "    return documents"
-      ],
-      "metadata": {
-        "id": "ELfTnYORA67B"
-      },
-      "execution_count": 17,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Process documents"
-      ],
       "metadata": {
         "id": "cHEErWI_CezW"
-      }
+      },
+      "source": [
+        "# Process documents"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {
+        "id": "tv3Rv2XPClx1"
+      },
+      "outputs": [],
       "source": [
         "def create_vector_store(documents):\n",
         "    \"\"\"Create a searchable vector database from documents.\"\"\"\n",
@@ -490,24 +481,24 @@
         "    # Create vector store\n",
         "    vector_store = FAISS.from_documents(chunks, embeddings)\n",
         "    return vector_store"
-      ],
-      "metadata": {
-        "id": "tv3Rv2XPClx1"
-      },
-      "execution_count": 12,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Generate response using RAG"
-      ],
       "metadata": {
         "id": "FW958AiMCuEH"
-      }
+      },
+      "source": [
+        "# Generate response using RAG"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {
+        "id": "Bp6o4sjOCwnf"
+      },
+      "outputs": [],
       "source": [
         "def answer_question(question, vector_store, model):\n",
         "    \"\"\"Generate an answer using Retrieval-Augmented Generation.\"\"\"\n",
@@ -537,24 +528,86 @@
         "        return response.text\n",
         "    except Exception as e:\n",
         "        return f\"Error generating response: {str(e)}\""
-      ],
-      "metadata": {
-        "id": "Bp6o4sjOCwnf"
-      },
-      "execution_count": 13,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Main execution"
-      ],
       "metadata": {
         "id": "CdraJWatDAgb"
-      }
+      },
+      "source": [
+        "# Main execution"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 653
+        },
+        "id": "zyqoGUBsDHzl",
+        "outputId": "15027957-e68e-46d8-997a-70b61b3afa3c"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "=== CTSE Lecture Notes Chatbot ===\n",
+            "Setting up the Gemini model...\n",
+            "\n",
+            "Loading documents from the 'datasets' folder...\n",
+            "Loaded PDF: datasets/ML Lec 2 - Part 2 LLM.pdf\n",
+            "Loaded PDF: datasets/cloud-computing-concepts-technology-amp-architecture-by-thomas-erl.pdf\n",
+            "Loaded PDF: datasets/ML Lec 2 - Part 1.pdf\n",
+            "Loaded PowerPoint: datasets/AWS User Groups Colombo - Introduction to AWS Cloud Platform.pptx\n",
+            "Loaded PowerPoint: datasets/Lecture 01-Introduction to AI ML - Updated(2025).pptx\n",
+            "Loaded PowerPoint: datasets/Microservice Design Patterns.pptx\n",
+            "Loaded PowerPoint: datasets/Lecture 2 - Part 1.pptx\n",
+            "Loaded PowerPoint: datasets/Cloud Computing 101.pptx\n",
+            "Loaded PowerPoint: datasets/Introduction to Microservices.pptx\n",
+            "Loaded PowerPoint: datasets/Cloud Design Patterns - 1.pptx\n",
+            "Loaded PowerPoint: datasets/Cloud Design Patterns - 2.pptx\n",
+            "Loaded PowerPoint: datasets/Lecture 2 - Part 2.pptx\n",
+            "Loaded PowerPoint: datasets/CAP Theorem.pptx\n",
+            "Loaded PowerPoint: datasets/Intro to DevOps and Beyond.pptx\n",
+            "Loaded PowerPoint: datasets/Containers 101.pptx\n",
+            "\n",
+            "Processing documents and creating vector store...\n",
+            "Split into 1102 chunks.\n",
+            "\n",
+            "Chatbot ready! You can now ask questions about your CTSE lecture notes.\n",
+            "Type 'exit' to end the conversation.\n",
+            "\n",
+            "Your question: What is cloud computing?\n",
+            "Generating answer...\n"
+          ]
+        },
+        {
+          "data": {
+            "text/markdown": [
+              "**Answer:**\n",
+              "Cloud computing is a specialized form of distributed computing that introduces utilization models for remotely provisioning scalable and measured resources.  A cloud refers to a distinct IT environment designed for remotely provisioning scalable and measured IT resources.  The term originated as a metaphor for the Internet, a network of networks providing remote access to decentralized IT resources.\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Markdown object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Your question: exit\n",
+            "Goodbye!\n"
+          ]
+        }
+      ],
       "source": [
         "print(\"=== CTSE Lecture Notes Chatbot ===\")\n",
         "\n",
@@ -589,71 +642,21 @@
         "            print(\"Generating answer...\")\n",
         "            answer = answer_question(question, vector_store, model)\n",
         "            display(Markdown(f\"**Answer:**\\n{answer}\"))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 653
-        },
-        "id": "zyqoGUBsDHzl",
-        "outputId": "15027957-e68e-46d8-997a-70b61b3afa3c"
-      },
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "=== CTSE Lecture Notes Chatbot ===\n",
-            "Setting up the Gemini model...\n",
-            "\n",
-            "Loading documents from the 'datasets' folder...\n",
-            "Loaded PDF: datasets/ML Lec 2 - Part 2 LLM.pdf\n",
-            "Loaded PDF: datasets/cloud-computing-concepts-technology-amp-architecture-by-thomas-erl.pdf\n",
-            "Loaded PDF: datasets/ML Lec 2 - Part 1.pdf\n",
-            "Loaded PowerPoint: datasets/AWS User Groups Colombo - Introduction to AWS Cloud Platform.pptx\n",
-            "Loaded PowerPoint: datasets/Lecture 01-Introduction to AI ML - Updated(2025).pptx\n",
-            "Loaded PowerPoint: datasets/Microservice Design Patterns.pptx\n",
-            "Loaded PowerPoint: datasets/Lecture 2 - Part 1.pptx\n",
-            "Loaded PowerPoint: datasets/Cloud Computing 101.pptx\n",
-            "Loaded PowerPoint: datasets/Introduction to Microservices.pptx\n",
-            "Loaded PowerPoint: datasets/Cloud Design Patterns - 1.pptx\n",
-            "Loaded PowerPoint: datasets/Cloud Design Patterns - 2.pptx\n",
-            "Loaded PowerPoint: datasets/Lecture 2 - Part 2.pptx\n",
-            "Loaded PowerPoint: datasets/CAP Theorem.pptx\n",
-            "Loaded PowerPoint: datasets/Intro to DevOps and Beyond.pptx\n",
-            "Loaded PowerPoint: datasets/Containers 101.pptx\n",
-            "\n",
-            "Processing documents and creating vector store...\n",
-            "Split into 1102 chunks.\n",
-            "\n",
-            "Chatbot ready! You can now ask questions about your CTSE lecture notes.\n",
-            "Type 'exit' to end the conversation.\n",
-            "\n",
-            "Your question: What is cloud computing?\n",
-            "Generating answer...\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Markdown object>"
-            ],
-            "text/markdown": "**Answer:**\nCloud computing is a specialized form of distributed computing that introduces utilization models for remotely provisioning scalable and measured resources.  A cloud refers to a distinct IT environment designed for remotely provisioning scalable and measured IT resources.  The term originated as a metaphor for the Internet, a network of networks providing remote access to decentralized IT resources.\n"
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "Your question: exit\n",
-            "Goodbye!\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
